社团管理系统 - 类图说明
========================

本文件包含社团管理系统的UML类图，使用标准的PlantUML语法描述。
你可以将以下内容复制到任何支持PlantUML的工具中查看图形化类图。

推荐工具：
1. 在线编辑器：https://www.plantuml.com/plantuml/uml/
2. VS Code插件：PlantUML
3. IntelliJ IDEA插件：PlantUML integration

使用方法：
1. 复制下面的PlantUML代码
2. 粘贴到在线编辑器或IDE插件中
3. 即可生成可视化的类图

```plantuml
@startuml

' 核心实体类

' 用户类
class User {
  - userId: Integer
  - username: String
  - password: String
  - realName: String
  - role: String
  - status: String
  - clubId: Integer
  - studentId: String
  - department: String
  - className: String
  - registerTime: Date
  - lastLoginTime: LocalDateTime
  - email: String
  - phone: String
  - createTime: LocalDateTime
  - updateTime: LocalDateTime
  + getId(): Integer
  + setId(id: Integer): void
  + getUserId(): Integer
  + getUsername(): String
  + getPassword(): String
  + getRealName(): String
  + getRole(): String
  + getStatus(): String
  + getClubId(): Integer
  + getStudentId(): String
  + getDepartment(): String
  + getClassName(): String
  + getRegisterTime(): Date
  + getLastLoginTime(): LocalDateTime
  + getEmail(): String
  + getPhone(): String
  + getCreateTime(): LocalDateTime
  + getUpdateTime(): LocalDateTime
  + setUserId(userId: Integer): void
  + setUsername(username: String): void
  + setPassword(password: String): void
  + setRealName(realName: String): void
  + setRole(role: String): void
  + setStatus(status: String): void
  + setClubId(clubId: Integer): void
  + setStudentId(studentId: String): void
  + setDepartment(department: String): void
  + setClassName(className: String): void
  + setRegisterTime(registerTime: Date): void
  + setLastLoginTime(lastLoginTime: LocalDateTime): void
  + setEmail(email: String): void
  + setPhone(phone: String): void
  + setCreateTime(createTime: LocalDateTime): void
  + setUpdateTime(updateTime: LocalDateTime): void
}

' 社团类
class Club {
  - clubId: Integer
  - clubName: String
  - description: String
  - founderId: Integer
  - advisorId: Integer
  - status: String
  - createTime: LocalDateTime
  - updateTime: LocalDateTime
  - founderName: String
  - advisorName: String
  + getClubId(): Integer
  + getClubName(): String
  + getDescription(): String
  + getFounderId(): Integer
  + getAdvisorId(): Integer
  + getStatus(): String
  + getCreateTime(): LocalDateTime
  + getUpdateTime(): LocalDateTime
  + getFounderName(): String
  + getAdvisorName(): String
  + setClubId(clubId: Integer): void
  + setClubName(clubName: String): void
  + setDescription(description: String): void
  + setFounderId(founderId: Integer): void
  + setAdvisorId(advisorId: Integer): void
  + setStatus(status: String): void
  + setCreateTime(createTime: LocalDateTime): void
  + setUpdateTime(updateTime: LocalDateTime): void
  + setFounderName(founderName: String): void
  + setAdvisorName(advisorName: String): void
}

' 活动类
class Activity {
  - activityId: Integer
  - clubId: Integer
  - title: String
  - content: String
  - startTime: LocalDateTime
  - endTime: LocalDateTime
  - location: String
  - status: String
  - createTime: LocalDateTime
  - updateTime: LocalDateTime
  - clubName: String
  + getActivityId(): Integer
  + getClubId(): Integer
  + getTitle(): String
  + getContent(): String
  + getStartTime(): LocalDateTime
  + getEndTime(): LocalDateTime
  + getLocation(): String
  + getStatus(): String
  + getCreateTime(): LocalDateTime
  + getUpdateTime(): LocalDateTime
  + getClubName(): String
  + setActivityId(activityId: Integer): void
  + setClubId(clubId: Integer): void
  + setTitle(title: String): void
  + setContent(content: String): void
  + setStartTime(startTime: LocalDateTime): void
  + setEndTime(endTime: LocalDateTime): void
  + setLocation(location: String): void
  + setStatus(status: String): void
  + setCreateTime(createTime: LocalDateTime): void
  + setUpdateTime(updateTime: LocalDateTime): void
  + setClubName(clubName: String): void
}

' 活动报名类
class ActivitySignup {
  - id: Integer
  - activityId: Integer
  - userId: Integer
  - status: String
  - signupTime: LocalDateTime
  - checkinTime: LocalDateTime
  + getId(): Integer
  + getActivityId(): Integer
  + getUserId(): Integer
  + getStatus(): String
  + getSignupTime(): LocalDateTime
  + getCheckinTime(): LocalDateTime
  + setId(id: Integer): void
  + setActivityId(activityId: Integer): void
  + setUserId(userId: Integer): void
  + setStatus(status: String): void
  + setSignupTime(signupTime: LocalDateTime): void
  + setCheckinTime(checkinTime: LocalDateTime): void
}

' 公告类
class Announcement {
  - announcementId: Integer
  - title: String
  - content: String
  - publisherId: Integer
  - targetType: String
  - targetId: Integer
  - status: String
  - isTop: Integer
  - viewCount: Integer
  - publishTime: LocalDateTime
  - updateTime: LocalDateTime
  - publisherName: String
  + getAnnouncementId(): Integer
  + getTitle(): String
  + getContent(): String
  + getPublisherId(): Integer
  + getTargetType(): String
  + getTargetId(): Integer
  + getStatus(): String
  + getIsTop(): Integer
  + getViewCount(): Integer
  + getPublishTime(): LocalDateTime
  + getUpdateTime(): LocalDateTime
  + getPublisherName(): String
  + setAnnouncementId(announcementId: Integer): void
  + setTitle(title: String): void
  + setContent(content: String): void
  + setPublisherId(publisherId: Integer): void
  + setTargetType(targetType: String): void
  + setTargetId(targetId: Integer): void
  + setStatus(status: String): void
  + setIsTop(isTop: Integer): void
  + setViewCount(viewCount: Integer): void
  + setPublishTime(publishTime: LocalDateTime): void
  + setUpdateTime(updateTime: LocalDateTime): void
  + setPublisherName(publisherName: String): void
}

' 申请类
class Application {
  - applicationId: Integer
  - userId: Integer
  - clubId: Integer
  - recruitmentId: Integer
  - introduction: String
  - status: String
  - comments: String
  - applyTime: LocalDateTime
  - reviewTime: LocalDateTime
  - userName: String
  - userSid: String
  - clubName: String
  - recruitmentTitle: String
  + getApplicationId(): Integer
  + getUserId(): Integer
  + getClubId(): Integer
  + getRecruitmentId(): Integer
  + getIntroduction(): String
  + getStatus(): String
  + getComments(): String
  + getApplyTime(): LocalDateTime
  + getReviewTime(): LocalDateTime
  + getUserName(): String
  + getUserSid(): String
  + getClubName(): String
  + getRecruitmentTitle(): String
  + setApplicationId(applicationId: Integer): void
  + setUserId(userId: Integer): void
  + setClubId(clubId: Integer): void
  + setRecruitmentId(recruitmentId: Integer): void
  + setIntroduction(introduction: String): void
  + setStatus(status: String): void
  + setComments(comments: String): void
  + setApplyTime(applyTime: LocalDateTime): void
  + setReviewTime(reviewTime: LocalDateTime): void
  + setUserName(userName: String): void
  + setUserSid(userSid: String): void
  + setClubName(clubName: String): void
  + setRecruitmentTitle(recruitmentTitle: String): void
}

' 审批类
class Approval {
  - approvalId: Integer
  - type: String
  - relatedId: Integer
  - applicantId: Integer
  - approverId: Integer
  - status: String
  - comments: String
  - currentStep: Integer
  - totalSteps: Integer
  - createTime: LocalDateTime
  - updateTime: LocalDateTime
  - applicantName: String
  - approverName: String
  - relatedTitle: String
  + getApprovalId(): Integer
  + getType(): String
  + getRelatedId(): Integer
  + getApplicantId(): Integer
  + getApproverId(): Integer
  + getStatus(): String
  + getComments(): String
  + getCurrentStep(): Integer
  + getTotalSteps(): Integer
  + getCreateTime(): LocalDateTime
  + getUpdateTime(): LocalDateTime
  + getApplicantName(): String
  + getApproverName(): String
  + getRelatedTitle(): String
  + setApprovalId(approvalId: Integer): void
  + setType(type: String): void
  + setRelatedId(relatedId: Integer): void
  + setApplicantId(applicantId: Integer): void
  + setApproverId(approverId: Integer): void
  + setStatus(status: String): void
  + setComments(comments: String): void
  + setCurrentStep(currentStep: Integer): void
  + setTotalSteps(totalSteps: Integer): void
  + setCreateTime(createTime: LocalDateTime): void
  + setUpdateTime(updateTime: LocalDateTime): void
  + setApplicantName(applicantName: String): void
  + setApproverName(approverName: String): void
  + setRelatedTitle(relatedTitle: String): void
}

' 操作日志类
class OperationLog {
  - logId: Integer
  - userId: Integer
  - username: String
  - operation: String
  - targetType: String
  - targetId: Integer
  - ipAddress: String
  - userAgent: String
  - createTime: LocalDateTime
  + getLogId(): Integer
  + getUserId(): Integer
  + getUsername(): String
  + getOperation(): String
  + getTargetType(): String
  + getTargetId(): Integer
  + getIpAddress(): String
  + getUserAgent(): String
  + getCreateTime(): LocalDateTime
  + setLogId(logId: Integer): void
  + setUserId(userId: Integer): void
  + setUsername(username: String): void
  + setOperation(operation: String): void
  + setTargetType(targetType: String): void
  + setTargetId(targetId: Integer): void
  + setIpAddress(ipAddress: String): void
  + setUserAgent(userAgent: String): void
  + setCreateTime(createTime: LocalDateTime): void
}

' 登录DTO类
class LoginDTO {
  - username: String
  - password: String
  + getUsername(): String
  + getPassword(): String
  + setUsername(username: String): void
  + setPassword(password: String): void
}

' 登录VO类
class LoginVO {
  - userId: Integer
  - username: String
  - realName: String
  - role: String
  - token: String
  + getUserId(): Integer
  + getUsername(): String
  + getRealName(): String
  + getRole(): String
  + getToken(): String
  + setUserId(userId: Integer): void
  + setUsername(username: String): void
  + setRealName(realName: String): void
  + setRole(role: String): void
  + setToken(token: String): void
}

' 权限类
class Permission {
  - permissionId: Integer
  - permissionName: String
  - permissionCode: String
  - description: String
  + getPermissionId(): Integer
  + getPermissionName(): String
  + getPermissionCode(): String
  + getDescription(): String
  + setPermissionId(permissionId: Integer): void
  + setPermissionName(permissionName: String): void
  + setPermissionCode(permissionCode: String): void
  + setDescription(description: String): void
}

' 统计数据类
class StatisticsData {
  - totalClubs: Integer
  - totalActivities: Integer
  - totalMembers: Integer
  - totalApplications: Integer
  - recentActivities: List<Activity>
  - clubRankings: List<ClubRanking>
  + getTotalClubs(): Integer
  + getTotalActivities(): Integer
  + getTotalMembers(): Integer
  + getTotalApplications(): Integer
  + getRecentActivities(): List<Activity>
  + getClubRankings(): List<ClubRanking>
  + setTotalClubs(totalClubs: Integer): void
  + setTotalActivities(totalActivities: Integer): void
  + setTotalMembers(totalMembers: Integer): void
  + setTotalApplications(totalApplications: Integer): void
  + setRecentActivities(recentActivities: List<Activity>): void
  + setClubRankings(clubRankings: List<ClubRanking>): void
}

' 社团排名类
class ClubRanking {
  - clubId: Integer
  - clubName: String
  - score: Integer
  - rank: Integer
  + getClubId(): Integer
  + getClubName(): String
  + getScore(): Integer
  + getRank(): Integer
  + setClubId(clubId: Integer): void
  + setClubName(clubName: String): void
  + setScore(score: Integer): void
  + setRank(rank: Integer): void
}

' 成长数据类
class GrowthData {
  - date: String
  - value: Integer
  + getDate(): String
  + getValue(): Integer
  + setDate(date: String): void
  + setValue(value: Integer): void
}

' 关系定义
' 用户与社团：多对一
User "*" -- "1" Club : belongs to

' 社团与活动：一对多
Club "1" -- "*" Activity : organizes

' 用户与活动：多对多（通过ActivitySignup）
User "*" -- "*" Activity : participates in

' 用户与活动报名：一对多
User "1" -- "*" ActivitySignup : signs up

' 活动与活动报名：一对多
Activity "1" -- "*" ActivitySignup : has signups

' 用户与公告：一对多（发布）
User "1" -- "*" Announcement : publishes

' 用户与申请：一对多
User "1" -- "*" Application : submits

' 社团与申请：一对多
Club "1" -- "*" Application : receives

' 用户与审批：一对多（申请）
User "1" -- "*" Approval : applies for

' 用户与审批：一对多（审批）
User "1" -- "*" Approval : approves

' 社团与审批：一对多
Club "1" -- "*" Approval : related to

' 活动与审批：一对多
Activity "1" -- "*" Approval : related to

' 用户与操作日志：一对多
User "1" -- "*" OperationLog : generates

@enduml
```